# Shelling-Model

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.circleci/: config.yml
Desktop/GitHub/Shelling model/: README.md  Schelling_model.py
ethnic_residential_dynamics/: Schelling_model.py  __init__.py
ethnic_residential_dynamics/libs/: __init__.py  fit.py  init_matrix.py  satisfaction.py
ethnic_residential_dynamics/processes/workers/: make_simulation.py
ethnic_residential_dynamics/utils/: __init__.py  neighbors_type.py  parser.py  plot_matrix.py  unbalance_matrix.py
tests/: __init__.py  conftest.py
tests/libs/: __init__.py  test_fit.py  test_init_matrix.py
tests/processes/workers/: test_make_simulation.py
tests/utils/: __init__.py  test_neighbors_type.py  test_parser.py  test_unbalance_matrix.py
