[tool.poetry]
name = "ethnic-residential-dynamics"
version = "0.1.0"
description = "Implementation of the Shelling Model of Ethnics Residential Dynamics"
authors = ["Driss Debbagh-Nour <dndriss@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
numpy = "^1.18.5"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
black = "19.10.b0"
isort = "4.3.21"
flake8 = "3.8.3"
flake8-bugbear = "20.1.4"
flake8-docstrings = "1.5.0"
mypy = "0.770"
pep8-naming = "0.10.0"
pytest = "mock"
pytest-cov = "2.9.0"
pytest-mock = "3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
